fixed test commands in yaml file

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,4 +24,6 @@ jobs:
           pip install -r requirements.txt
 
       - name: Run Tests
-        run: python BharaHobe/manage.py test payment/tests/
+        run:
+          cd BharaHobe
+          python manage.py test
